# vijil-travel-agent

./: .bedrock_agentcore.yaml  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  agent.py  dome-config.toml  dome_a2a.py  dome_config_fast.toml  dome_config_full.toml  dome_setup.py  genome_loader.py  handler.py  pyproject.toml  requirements.txt  telemetry.py  test_adversarial.py  tool_permissions.py  vijil_dome-1.3.2-py3-none-any.whl  vijil_dome-1.5.0-py3-none-any.whl  vulnerabilities.yaml
.github/workflows/: docker.yml  lint.yml  test.yml
db/: __init__.py  connection.py  seed_data.py
demo/: app.js  index.html  style.css
docs/: EKS_DEPLOYMENT.md
docs/plans/: 2026-01-20-vijil-travel-agent-implementation.md  2026-02-19-vulnerability-seeding-design.md  2026-02-19-vulnerability-seeding-plan.md
dome_integrations/: __init__.py  telemetry.py
k8s/: deployment-domed-eks.yaml  deployment-domed.yaml  deployment-eks.yaml  deployment.yaml
oracle/: README.md  __init__.py  __main__.py  canary.py  checker.py  coverage.py  probe_runner.py  registry.py  taxonomy.py  validate.py
routes/: admin.py
tests/: test_admin_api.py  test_admin_oracle_integration.py  test_config_propagation.py  test_db_schema.py  test_directory_tools.py  test_external_tools.py  test_memory_tools.py  test_oracle_registry.py  test_seed_data.py  test_smoke.py  test_sync_loading.py  test_system_prompt.py
tools/: __init__.py  booking.py  credentials.py  directory.py  disruption.py  expense.py  external.py  loyalty.py  memory.py  payments.py  policy.py  profile.py  research.py
